# Tunisian_NamesML

./: .gitignore  JSON editor.json  README.md  docker-compose.yml  rapportLatex
my_project/: Cargo.toml  Dockerfile
my_project/src/: db.rs  handlers.rs  main.rs  main_cli.rs  middleware.rs  models.rs
my_project/src/utils/: gold_set.rs  linked_list.rs  loader.rs  matching.rs  mod.rs  ner.rs  normalization.rs  phonetic.rs
name_matchin_ui/: Dockerfile  angular.json  package-lock.json  package.json  proxy.conf.json
name_matchin_ui/src/: index.html  styles.css
name_matchin_ui/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
name_matchin_ui/src/app/api-usage-popup/: api-usage-popup.component.css  api-usage-popup.component.html  api-usage-popup.component.spec.ts  api-usage-popup.component.ts
name_matchin_ui/src/app/family-tree/: family-tree.component.css  family-tree.component.html  family-tree.component.spec.ts  family-tree.component.ts
name_matchin_ui/src/app/identity-match/: identity-match.component.css  identity-match.component.html  identity-match.component.spec.ts  identity-match.component.ts
name_matchin_ui/src/app/login/: login.component.css  login.component.html  login.component.ts
name_matchin_ui/src/app/models/: user.model.ts
name_matchin_ui/src/app/register/: register.component.css  register.component.html  register.component.ts
name_matchin_ui/src/app/services/: api-usage.service.spec.ts  api-usage.service.ts  (+8 more)
name_matchin_ui/src/environments/: environment.ts
(+6 files in other folders)
