[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.3", features = ["cors"] }
axum = "0.7.9"
tokio = { version = "1.44.0", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
bb8 = "0.7"
bb8-postgres = "0.7"
tokio-postgres = { version = "0.7.13", features = ["with-uuid-0_8"] }
strsim = "0.11.1"
regex = "1.11.1"
rayon = "1.10.0"
neo4rs = "0.6"
serde_json = "1"
linregress = "0.5"
csv = "1.2"
linfa = "0.6.1"
linfa-logistic = "0.6.1"
ndarray = "0.15.6"
rand = "0.8.5"
serde_derive = "1.0"
http = "1.3.1"


